tests/ui/traits/non_lifetime_binders/universe-error1.stderr
error[E0277]: the trait bound `T: Other<_>` is not satisfied
  --> $DIR/universe-error1.rs:21:11
   |
LL |     foo::<_>();
   |           ^ the trait `Other<_>` is not implemented for `T`
   |
note: required by a bound in `foo`
  --> $DIR/universe-error1.rs:18:15
   |
LL | fn foo<U: ?Sized>()
   |    --- required by a bound in this function
LL | where
LL |     for<T> T: Other<U> {}
   |               ^^^^^^^^ required by this bound in `foo`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0277`.
